2014-02-28  Andy Sawyer  <andy.sawyer@gmail.com>  (tiny change)

	* saveplace.el (toggle-save-place):
	Fix argument handling.  (Bug#16673)

2014-02-28  Glenn Morris  <rgm@gnu.org>

	* minibuffer.el (completions-first-difference)
	(completions-common-part, completion-hilit-commonality): Doc fixes.

2014-02-28  Karl Berry  <karl@gnu.org>

	* info.el (Info-mode-map): Add H for describe-mode,
	to synchronize with standalone Info.

2014-02-28  Emilio C. Lopes  <eclig@gmx.net>

	* progmodes/sql.el (sql-interactive-mode):
	Avoid setting global comint-input-ring-separator.  (Bug#16814)

2014-02-27  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus--init-bus): Declare function.
	(dbus-path-local, dbus-interface-local): New defconst.
	(dbus-init-bus): Use them.
	(dbus-return-values-table): Extend doc.
	(dbus-handle-bus-disconnect): Extend error message.

2014-02-27  Juanma Barranquero  <lekktu@gmail.com>

	* subr.el (y-or-n-p): Fix double space issue in message.

2014-02-27  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-call-process): Improve trace message.
	(tramp-handle-insert-file-contents): Trace error case.

	* net/tramp-adb.el (tramp-adb-file-name-handler-alist)
	<insert-directory>: Use `tramp-handle-insert-directory'.
	(tramp-adb-handle-insert-directory): Remove function.
	(tramp-adb-send-command-and-check): New defun, replacing
	`tramp-adb-command-exit-status'.  Change all callees.
	(tramp-adb-handle-file-attributes)
	(tramp-adb-handle-directory-files-and-attributes): Use it.
	(tramp-adb-ls-output-name-less-p): Use
	`directory-listing-before-filename-regexp'.
	(tramp-adb-handle-delete-directory): Flush also file properties of
	the truename of directory.
	(tramp-adb-handle-file-name-all-completions): Add "./" and "../".
	(tramp-adb-handle-file-local-copy): Make the local copy readable.
	(tramp-adb-handle-write-region): Implement APPEND.
	(tramp-adb-handle-rename-file): Make it more robust.  Flush file
	properties correctly.